# xdg-desktop-portal-singularity

./: CLA.md  CONTRIBUTING.md  LICENSE  README.md  meson.build
po/: POTFILES.in  meson.build
src/: access.vala  account.vala  app_chooser.vala  chooser_main.vala  dbus_helper.c  dbus_helper.h  dynamic_launcher.vala  email.vala  file_chooser_portal.vala  inhibit.vala  lockdown.vala  main.vala  notification.vala  open_uri.vala  print.vala  screencast.vala  screencast_backend.c  screencast_backend.h  screencast_source_picker.vala  screenshot.vala  settings.vala  ush.vala  wallpaper.vala
